CalendarWeek styling and resizing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,10 +48,13 @@ body {
 }
 
 .scrollbar-hidden {
-  -ms-overflow-style: none; /* IE */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
-  display: none; /* Chrome, Safari */
+  display: none;
+  /* Chrome, Safari */
 }
